--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,6 @@ cycler==0.11.0
 dbus-python==1.2.16
 defer==1.0.6
 distro==1.4.0
-distro-info===0.23ubuntu1
 docutils==0.16
 duplicity==0.8.12.0
 entrypoints==0.3
@@ -100,9 +99,9 @@ PyNaCl==1.3.0
 pyparsing==3.0.9
 pyRFC3339==1.1
 pyserial==3.5
-python-apt==2.0.1+ubuntu0.20.4.1
+python-apt==2.0.1
 python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
+python-debian===0.1.36
 pytz==2022.2.1
 pyxdg==0.26
 PyYAML==5.3.1
@@ -116,7 +115,6 @@ rsa==4.9
 scipy==1.10.1
 screen-resolution-extra==0.0.0
 SecretStorage==2.3.1
-segment-anything @ git+https://github.com/facebookresearch/segment-anything.git@c1910835a32a05cbb79bdacbec8f25914a7e3a20
 simplejson==3.16.0
 six==1.14.0
 Sphinx==1.8.5
